Green text Hello world

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My-project</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <h1 style="color: green;">Hello world!</h1>
 </body>
 </html>
