--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </header>
     <main>
       <div class="container text-center">
-        <h1 style="color: green">Hello world!</h1>
+        <h1 style="color: green">Hello world!!</h1>
       </div>
       <section>
         <p>First section</p>
